--- a/L03_BreakoutWalls/Main.html
+++ b/L03_BreakoutWalls/Main.html
@@ -8,7 +8,7 @@
     <script src="Main.js"></script>
 </head>
 <body>
-    <h1>L02 Bouncy Ball</h1>
+    <h1>L03 - we will build a great wall</h1>
     <canvas width="600" height="400"></canvas>
 </body>
 </html>
