--- a/L04_Breakout_Reflection/Main.html
+++ b/L04_Breakout_Reflection/Main.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>L04 - pog</title>
     <script src="../FudgeCore/FudgeCore.js"></script>
     <script src="Main.js"></script>
+    <script src="GameObject.js"></script> 
 </head>
 <body>
-    <h1>L02 Bouncy Ball</h1>
+    <h1>L04 - we have built some great walls</h1>
     <canvas width="600" height="400"></canvas>
 </body>
 </html>
