--- a/L06_Breakout_Control/Main.html
+++ b/L06_Breakout_Control/Main.html
@@ -14,9 +14,10 @@
 </head>
 
 <body>
-    <h1>L06 - he do be moving in the x axis doe</h1>
+    <h1>L06 - imagine losing lmao</h1>
     <canvas width="600" height="400"></canvas>
     <h3 id="status"></h3>
+    <h2 id="score"></h5>
 </body>
 
 </html>
