Doom Camera Control/Movement + Textures

--- a/L08_Doom_Start/index.html
+++ b/L08_Doom_Start/index.html
@@ -4,9 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Doom</title>
     <script src="../FudgeCore/FudgeCore.js"></script>
+    <script src="../FudgeAid/FudgeAid.js"></script>
     <script src="Main.js"></script>
+    <script src="Wall.js"></script>
+    
 
 </head>
 
