Doom Folder Structure

--- a/L08_Doom_Start/index.html
+++ b/L08_Doom_Start/index.html
@@ -8,8 +8,11 @@
     <title>Doom</title>
     <script src="../FudgeCore/FudgeCore.js"></script>
     <script src="../FudgeAid/FudgeAid.js"></script>
-    <script src="Main.js"></script>
-    <script src="Wall.js"></script>
+    <script src="src/objects/gameobject.js"></script>
+    <script src="src/objects/level/floor.js"></script>
+    <script src="src/objects/level/wall.js"></script>
+    <script src="src/objects/level/prop.js"></script>
+    <script src="src/game.js"></script>
     
 
 </head>
