Doom Control fixed, Enemy added

--- a/L09_Doom_Enemy/index.html
+++ b/L09_Doom_Enemy/index.html
@@ -9,8 +9,8 @@
     <script src="../FudgeCore/FudgeCore.js"></script>
     <script src="../FudgeAid/FudgeAid.js"></script>
     <script src="src/objects/gameobject.js"></script>
-    <script src="src/objects/level/floor.js"></script>
-    <script src="src/objects/level/enemy.js"></script>
+    <script src="src/objects/enemy.js"></script>
+    <script src="src/objects/level/wall.js"></script>
     <script src="src/game.js"></script>
     
     <style>
